<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.enonic.cms</groupId>
  <artifactId>cms-ce</artifactId>
  <packaging>pom</packaging>
  <name>Enonic CMS</name>
  <version>4.7.0-SNAPSHOT</version>

  <licenses>
    <license>
      <name>AGPL 3.0</name>
      <url>http://www.gnu.org/licenses/agpl-3.0.txt</url>
    </license>
  </licenses>

  <properties>
    <!-- source encoding -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- maven-compiler-plugin -->
    <maven.compiler.target>1.6</maven.compiler.target>
    <maven.compiler.source>1.6</maven.compiler.source>

    <!-- maven timestamp format -->
    <maven.build.timestamp.format>yyyyMMdd.HHmmss</maven.build.timestamp.format>
    <buildTimestamp>${maven.build.timestamp}</buildTimestamp>

    <!-- some shared dependency versions -->
    <spring.version>3.1.0.RELEASE</spring.version>
    <slf4j.version>1.6.6</slf4j.version>
    <servlet.version>2.5</servlet.version>
  </properties>

  <modules>
    <module>modules/cms-api</module>
    <module>modules/cms-core</module>
    <module>modules/cms-itest</module>
    <module>modules/cms-webapp</module>
    <module>modules/cms-distro</module>
  </modules>

  <dependencies>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <version>${spring.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.10</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit-addons</groupId>
      <artifactId>junit-addons</artifactId>
      <version>1.4</version>
      <exclusions>
        <exclusion>
          <groupId>xerces</groupId>
          <artifactId>xercesImpl</artifactId>
        </exclusion>
        <exclusion>
          <groupId>xerces</groupId>
          <artifactId>xmlParserAPIs</artifactId>
        </exclusion>
      </exclusions>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymock</artifactId>
      <version>2.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymockclassextension</artifactId>
      <version>2.2.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>1.8.5</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>xmlunit</groupId>
      <artifactId>xmlunit</artifactId>
      <version>1.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <version>1.3.151</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.3.1</version>
      </plugin>
      <plugin>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>1.0</version>
        <executions>
          <execution>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <bannedDependencies>
                  <excludes>
                    <exclude>jdom:jdom</exclude>
                    <exclude>cglib:cglib</exclude>
                    <exclude>org.springframework:spring</exclude>
                    <exclude>xerces:*</exclude>
                    <exclude>xml-apis:xml-apis</exclude>
                    <exclude>stax:stax-api</exclude>
                    <exclude>com.google.collections:google-collections</exclude>
                    <exclude>log4j:log4j</exclude>
                    <exclude>commons-logging:commons-logging</exclude>
                  </excludes>
                </bannedDependencies>
                <requireJavaVersion>
                  <version>[1.6.0,1.7.0)</version>
                </requireJavaVersion>
                <requireMavenVersion>
                  <version>3.0.0</version>
                </requireMavenVersion>
              </rules>
              <fail>true</fail>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.12</version>
          <configuration>
            <forkMode>once</forkMode>
            <argLine>-Xmx2048m -XX:MaxPermSize=700m -Djava.awt.headless=true</argLine>
            <redirectTestOutputToFile>true</redirectTestOutputToFile>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <repositories>
    <repository>
      <id>enonic.repo</id>
      <url>http://repo.enonic.com/maven</url>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>enonic.internal</id>
      <url>http://repo.enonic.net/artifactory/public</url>
    </repository>
  </distributionManagement>

</project>
